Fix comment overflow bug on mobile

--- a/src/app/App-mobile.css
+++ b/src/app/App-mobile.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 50em) {
     .main-content-div {
         width: 100%;
         /* border: 1px solid red; */
