--- a/src/features/subredditstate/SubReddits-mobile.css
+++ b/src/features/subredditstate/SubReddits-mobile.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 50em) {
     .subreddits-div {
         display: none;
     }
